--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'ChatGPT Buttler'
-description: "A github action to handle issues first response with ChatGPT. This action will prompt recent issues and post the response as a comment."
+description: "A github action to handle issues first response with ChatGPT."
 author: "Cedric Blomart"
 inputs:
   repo-token:
