limit workflow on main branch

--- a/.github/workflows/update-dist.yaml
+++ b/.github/workflows/update-dist.yaml
@@ -2,8 +2,10 @@ name: Update Dist
 
 on:
   push:
+    branches:
+      - main
     paths:
-      - 'src/**.js'
+      - 'src/**/*.js'
   workflow_dispatch:
 
 permissions:
