--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   token:
     description: 'Repo token'
     required: false
-    default: ${{ secrets.GITHUB_TOKEN }}
+    default: ${{ github.token }}
   max-issues:
     description: 'Maximum number of issues to process'
     required: false
